test/raw_tests/fails/immut_ko1.sol
pragma solidity >=0.6.0;
// SPDX-License-Identifier: UNLICENSED

contract C {
  constructor() public {}
  int immutable x;
}

/*
Error: Construction control flow ends without initializing all immutable state variables.
*/
